--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
               <h1>A rethink of how we work</h1>
               <p>Being a freelancer is a rollercoaster of emotions. We built Slate to keep your 
               </p>
+              <h1>WEB DEVELOPMENT CLASS</h1>
           </div>
           <div class="line">
-            <div class="line1"></div>
+            <div class="line1">.</div>
             <div class="line2"></div>
           </div>
         </div>
